--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.1.0",
   "main": "index.js",
   "license": "MIT",
+  "files": [
+    "index.js",
+    "package.json",
+    "nodep.json"
+  ],
   "renovate-config": {
     "default": {
       "extends": [
